# AVAI-week2

./: .gitignore  .gitmodules  INR.py  README.md  bicubic.csv  bicubic.py  bicubic_x16.csv  compare_methods.py  dataloader.py  dataset.py  dip_super_resolution.ipynb  dip_super_resolution.py  edsr.py  edsr_model.py  edsr_utils.py  inr.py  inr_utils.py  plots.py  pyproject.toml  siren.py
data/sr_outputs/: dip_results.csv
outputs/bicubic/: bicubic_noise_std=0.1.csv  bicubic_noise_std=0.2.csv  bicubic_noise_std=0.3.csv  bicubic_noise_std=0.4.csv  bicubic_noise_std=0.5.csv
