[project]
name = "avai-week2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
